# mps-expenses

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
dashboard/: app.py
dashboard/assets/: dashboard.css
data/processed/: dashboard_dataset.csv
data/raw/annual_publications/: ipsa_totalspend_10_11.csv  ipsa_totalspend_11_12.csv  ipsa_totalspend_12_13.csv  ipsa_totalspend_13_14.csv  ipsa_totalspend_14_15.csv  ipsa_totalspend_15_16.csv  ipsa_totalspend_16_17.csv  ipsa_totalspend_17_18.csv  ipsa_totalspend_18_19.csv  ipsa_totalspend_19_20.csv  ipsa_totalspend_20_21.csv  ipsa_totalspend_21_22.csv  ipsa_totalspend_22_23.csv  ipsa_totalspend_23_24.csv  ipsa_totalspend_24_25.csv
docs/: limitations_and_assumptions.md
src/mp_expenses_audit/: __init__.py  __main__.py  config.py  pipeline.py
src/mp_expenses_audit/analytics/: __init__.py  features.py  risk_flags.py
src/mp_expenses_audit/data_quality/: __init__.py  cleaning.py  validation.py
src/mp_expenses_audit/ingestion/: __init__.py  annual_publications.py
src/mp_expenses_audit/reporting/: __init__.py  dashboard_data.py
src/mp_expenses_audit/utils/: __init__.py  logging_utils.py
tests/: __init__.py  test_cleaning.py  test_risk_flags.py  test_scaffold.py
