[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mp-expenses-audit"
version = "0.1.0"
description = "MP expenses audit analytics pipeline and dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.17.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "pytest>=8.0.0",
    "requests>=2.32.0",
    "scipy>=1.13.0",
]

[project.scripts]
mp-expenses-audit = "mp_expenses_audit.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]